Fix page alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 20px;
   box-sizing: border-box;
 }
 
